fix display alignment and colors

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,36 +1,42 @@
 
 @import '../../shared-styles/variables';
 
-.header {
-  text-align: center;
+:global {
+  html {
+    background: white;
+  }
 }
 
-.nav {
-  width: $content-width;
-  margin: 0 auto;
-  padding: $padding;
-  text-align: center;
-}
+// .header {
+//   text-align: center;
+// }
 
-.content {
-  width: $content-width;
-  margin: $padding auto;
-}
+// .nav {
+//   width: $content-width;
+//   margin: 0 auto;
+//   padding: $padding;
+//   text-align: center;
+// }
 
-.navItem {
-  display: inline-block;
-}
+// .content {
+//   width: $content-width;
+//   margin: $padding auto;
+// }
 
-.link {
-  padding: $padding;
-  color: #00a68f;
-  font-size: 18px;
-}
+// .navItem {
+//   display: inline-block;
+// }
 
-.logo {
-  display: block;
-  width: 252px;
-  height: 252px;
-  margin: $padding auto;
-  background: url('../../images/icon-kytLogo_large-252x252.svg');
-}
+// .link {
+//   padding: $padding;
+//   color: #00a68f;
+//   font-size: 18px;
+// }
+
+// .logo {
+//   display: block;
+//   width: 252px;
+//   height: 252px;
+//   margin: $padding auto;
+//   background: url('../../images/icon-kytLogo_large-252x252.svg');
+// }
